# matchday_store

./: .dockerignore  .env.example  .env.prod.example  .gitignore  00_FILES_LIST.md  ARCHITECTURE_DIAGRAMS.md  AUDIT.md  CART_LOGIC_REVIEW.md  CHECKLIST.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  INDEX.md  PLAN_FIXES_SALES_FLOW.md  PLAN_STOCK_ABUSE_REMEDIATION.md  PRODUCT_UX_BUSINESS_AUDIT.md  PROJECT_BASELINE_CHECK.md  QUICK_START.md  README.md  README.ru.md  README_IMPROVEMENTS.md  REMEDIATION_PLAN.md  RUNBOOK.md  TECHNICAL_PLAN_PAYMENT_AND_DELIVERY.md  TECH_DEFENSE_REPORT.md  TESTS_EXAMPLES.md  TODO.md  WHAT_TO_STUDY_BEFORE_DEFENSE.md  docker-compose.prod.yml  docker-compose.yaml  manage.py  pyproject.toml  test_celery_email.py  test_email.py  test_final_email.py  test_simple_task.py
.github/workflows/: backup-restore-verify.yml  cd.yml  ci-cd.yml  ci.yml
analytics/: context_processors.py  metrika.py  tests.py
analytics/templatetags/: metrika_tags.py
config/: celery.py  email_delivery.py  health.py  logging_context.py  logging_utils.py  metrics.py  middleware.py  rate_limits.py  request_ip.py  sentry.py  settings.py  tests.py  urls.py
delivery/: apps.py
docker/: gunicorn.conf.py  web-entrypoint.sh
docker/nginx/: default.conf
docker/prometheus/: prometheus.yml
docker/promtail/: promtail.yml
docs/: backup_s3.md
matchday_store/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
ops/backup/: cron.example  s3_backup.env.example  s3_backup.sh
orders/: admin.py  apps.py  forms.py  models.py  notification_logs.py  services.py  tasks.py  test_smoke_e2e.py  tests.py  urls.py  views.py
payments/: admin.py  apps.py  models.py  signals.py  tests.py
store/: admin.py  apps.py  context_processors.py  forms.py  models.py  signals.py  site_contacts.py  tasks.py  urls.py  views.py
support/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
users/: admin.py  apps.py  forms.py  models.py  tasks.py  test_tasks.py  tests.py  urls.py  views.py
(+176 files in other folders)
